<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#E0E0E0"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="8dp">

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_home_button"
        android:scaleType="fitCenter"
        android:src="@drawable/home_button" />

    <ImageButton
        android:id="@+id/passing_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_passing_button"
        android:scaleType="fitCenter"
        android:src="@drawable/passing_button" />

    <ImageButton
        android:id="@+id/history_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_history_button"
        android:scaleType="fitCenter"
        android:src="@drawable/history_button" />

    <ImageButton
        android:id="@+id/emotion_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_emotion_button"
        android:scaleType="fitCenter"
        android:src="@drawable/emotion_button" />

    <ImageButton
        android:id="@+id/gear_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="7dp"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:contentDescription="@string/content_description_gear_button"
        android:scaleType="fitCenter"
        android:src="@drawable/gear_button" />

</LinearLayout>