<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_nav"
    android:layout_width="match_parent"
    android:layout_height="@dimen/footer_height"
    android:background="@color/color_footer_background"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="@dimen/footer_padding">

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="@dimen/footer_button_size"
        android:layout_height="@dimen/footer_button_size"
        android:layout_marginBottom="@dimen/footer_button_margin_bottom"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/home_button"
        android:contentDescription="@string/content_description_home_button" />

    <ImageButton
        android:id="@+id/passing_button"
        android:layout_width="@dimen/footer_button_size"
        android:layout_height="@dimen/footer_button_size"
        android:layout_marginStart="@dimen/footer_button_margin_start"
        android:layout_marginBottom="@dimen/footer_button_margin_bottom"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/passing_button"
        android:contentDescription="@string/content_description_passing_button" />

    <ImageButton
        android:id="@+id/history_button"
        android:layout_width="@dimen/footer_button_size"
        android:layout_height="@dimen/footer_button_size"
        android:layout_marginStart="@dimen/footer_button_margin_start"
        android:layout_marginBottom="@dimen/footer_button_margin_bottom"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/history_button"
        android:contentDescription="@string/content_description_history_button" />

    <ImageButton
        android:id="@+id/emotion_button"
        android:layout_width="@dimen/footer_button_size"
        android:layout_height="@dimen/footer_button_size"
        android:layout_marginStart="@dimen/footer_button_margin_start"
        android:layout_marginBottom="@dimen/footer_button_margin_bottom"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/emotion_button"
        android:contentDescription="@string/content_description_emotion_button" />

    <ImageButton
        android:id="@+id/gear_button"
        android:layout_width="@dimen/footer_button_size"
        android:layout_height="@dimen/footer_button_size"
        android:layout_marginStart="@dimen/footer_button_margin_start"
        android:layout_marginBottom="@dimen/footer_button_margin_bottom"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/gear_button"
        android:contentDescription="@string/content_description_gear_button" />

</LinearLayout>