<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_account_deletion_background"
    tools:context=".AccountDeletionConfirmationScreenActivity">

    <!-- 確認メッセージ -->
    <TextView
        android:id="@+id/confirmation_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/account_deletion_confirmation_message"
        android:textColor="@android:color/black"
        android:textSize="@dimen/confirmation_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <!-- 戻るボタン -->
    <Button
        android:id="@+id/button_back"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/button_group_margin_top"
        android:layout_marginEnd="@dimen/button_horizontal_margin"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/button_back"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirmation_text" />

    <!-- 削除ボタン -->
    <Button
        android:id="@+id/button_delete"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_horizontal_margin"
        android:backgroundTint="@color/color_button_delete_background"
        android:text="@string/button_delete"
        android:textColor="@android:color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintTop_toTopOf="@+id/button_back" />

</androidx.constraintlayout.widget.ConstraintLayout>